# notification-engine

./: .env  .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.tsbuildinfo
src/: index.ts
src/config/: mongo-config.ts  onesignal-config.ts
src/modules/db/: db.model.ts
src/modules/queue/: queue.model.ts  queue.service.ts  queue.worker.ts  rabbitmq.ts
src/notification_engine/: api.py  celery_app.py  health.py  main.py  tasks.py  test_publish.py  worker.py
src/notification_engine/config/: onesignal_config.py  settings.py
src/notification_engine/models/: notification_model.py
src/notification_engine/modules/onesignal/: client.py
src/notification_engine/modules/queue/: queue_service.py  rabbitmq.py  worker.py
src/notification_engine/scripts/: delete_queue.py  test_notification.py
src/notification_engine/utils/: logger.py  metrics.py
