[tool.poetry]
name = "notification-engine"
version = "0.1.0"
description = "A notification engine using RabbitMQ and OneSignal"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aio-pika = "^9.4.0"
aiohttp = "^3.9.3"
python-dotenv = "^1.0.1"
typing-extensions = "^4.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
